# GigaStudy

./: .dockerignore  .gitignore  README.md  cloudbuild.api.yaml  docker-compose.infrastructure.yml  knip.json  package-lock.json  package.json  playwright.config.ts
apps/api/: .env.alpha.example  .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/calibration/: human_rating_cases.template.json  human_rating_corpus.template.json  human_rating_seeded_fixture.json  human_rating_sheet.template.csv  synthetic_vocal_baseline.json
apps/api/environment_validation/: README.md  environment_validation_runs.template.csv
apps/api/scripts/: build_human_rating_corpus.py  build_human_rating_evidence_bundle.py  create_evidence_round.py  evaluate_human_rating_claim_gate.py  export_project_case_to_evidence_round.py  fit_human_rating_thresholds.py  import_environment_validation_runs.py  inspect_evidence_round.py  inspect_human_rating_corpus.py  production_stack_smoke.py  refresh_evidence_round.py  run_intonation_calibration.py
apps/api/tests/: audio_fixtures.py  conftest.py  test_admin_api.py  test_analysis_api.py  test_arrangement_engine.py  test_arrangements_api.py  test_audio_tuning.py  test_calibration_claim_gate.py  test_calibration_evidence.py  test_calibration_runner.py  test_config.py  test_deepseek_llm.py  test_device_profiles_api.py  test_document_extraction_engine.py  test_environment_validation_import.py  test_environment_validation_round_preview.py  test_event_normalization.py  test_evidence_round_audit.py  (+41 more)
(+427 files in other folders)
