[project]
name = "gigastudy-api"
version = "0.1.0"
description = "FastAPI backend bootstrap for GigaStudy."
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2.0",
  "av>=16.0,<17.0",
  "boto3>=1.39,<2.0",
  "fastapi>=0.115,<1.0",
  "librosa>=0.11,<1.0",
  "numpy>=2.3,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gigastudy_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
